--- a/tutorial/firstapp/templates/firstapp/ajax4.html
+++ b/tutorial/firstapp/templates/firstapp/ajax4.html
@@ -16,16 +16,16 @@
     }
 
     const csrftoken = getCookie('csrftoken');
-    const formData = new FormData();
-    formData.append('a', 10);
-    formData.append('b', 20);
-    formData.append('c', 30);
+    const data2 = {'a' : 10, 'b' : 20, 'c' : 30}
 
     const data = axios({
-        url: '/first/req/post/',
+        url: '/first/req/json/',
         method: 'post',
-        data: formData,
-        headers: { 'X-CSRFToken': csrftoken }
+        data: JSON.stringify(data2),
+        headers: { 
+            'X-CSRFToken': csrftoken,
+            'Content-Type' : 'application/json' 
+    }
     });
     data.then(function (result) {
         console.log(result.data);
