--- a/tutorial/secondapp/templates/secondapp/exam.html
+++ b/tutorial/secondapp/templates/secondapp/exam.html
@@ -1,6 +1,9 @@
+{% load static %}
 <button id='get'>GET</button>
 <button id='post'>POST</button>
 <button id='json'>JSON</button>
+<img src='/static/animal-g80db78a24_1920.jpg'>
+<img src='{% static "animal-g80db78a24_1920.jpg" %}'>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
